2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/MemberCompletionData.cs: Fixed
	  'Bug 606959 - switch case completion doesn't handle
	  namespaces properly'.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Completion/CompletionTextLinkMode.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Implemented request in 'Bug 607366 - Text link mode can
	  break texteditor badly'.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Improved semicolon auto placement.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 534680 - LINQ keywords missing from
	  Intellisense'.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: Fixed 'Bug 606506
	  - Types of fields are not shown'

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Fixed 'Bug 606212 - Allow delegate renaming straight after
	  creation'.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Implemented 'Bug 606227 - Search reodering not available for
	  "override" completions.'.


2010-05-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Unsubscribe editor events.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  catch exception in highighit usages extension.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs: