@@ -1,5 +1,11 @@
 2010-05-20  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
+	  Fixed 'Bug 606884 - Control-enter in doc comments doesn't
+	  prefix the new line'.
+
+2010-05-20  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharp.Completion/MemberCompletionData.cs: Fixed
 	  'Bug 606959 - switch case completion doesn't handle
 	  namespaces properly'.
